# tosca

./: .codecov.yml  .golangci.yml  .testcoverage.yml  BUILD.md  Jenkinsfile  Makefile  README.md  go.mod  go.sum
.github/workflows/: coverage.yml  rust.yaml
CI/: Dockerfile.jenkins
cpp/: CMakeLists.txt
cpp/cmake/: tosca_asan.cmake  tosca_assert.cmake  tosca_dependencies.cmake
cpp/common/: CMakeLists.txt
cpp/vm/evmzero/: CMakeLists.txt  evmzero.cc  interpreter.cc  interpreter_test.cc  opcodes.inc
go/ct/: evm.go  evm_fuzz_test.go  evm_test.go  staticcheck.conf
go/ct/common/: address.go  address_test.go  bytes.go  bytes_test.go  delegator_designator.go  delegator_designator_test.go  hash.go  hash_test.go  immutable_hash_array.go  immutable_hash_array_test.go  revisions.go  revisions_test.go  u256.go  u256_test.go
go/ct/ct_test/: evm_fuzz_test.go  truncated_push_test.go
go/ct/driver/: generator_info.go  list.go  main.go  probe.go  regressions.go  run.go  smt-checker.go  smt-printer.go  stats.go  stats_test.go  test.go
go/ct/rlz/: conditions.go  conditions_test.go  domains.go  domains_test.go  effect.go  effect_test.go  expressions.go  expressions_test.go  parameters.go  parameters_test.go  rules.go  rules_test.go  test_value.go  test_value_test.go
go/ct/sexpr/: sexpr.go
go/ct/smt/: check.go  check_test.go  completeness.smt2  constants.go  out.smt2  prover.go  smt.go  z3.go  z3_test.go
go/ct/spc/: enumeration.go  enumeration_test.go  specification.go  specification_map.go  specification_mock.go  specification_test.go  staticcheck.conf
go/ct/st/: accounts.go  accounts_test.go  block_context.go  block_context_test.go  call_context.go  call_context_test.go  call_journal.go  call_journal_test.go  code.go  code_test.go  logs.go  memory.go  memory_test.go  serialization.go  serialization_integration_test.go  serialization_test.go  stack.go  stack_test.go  state.go  state_test.go  storage.go  storage_test.go  transaction_context.go  transaction_context_test.go  transient_storage.go  transient_storage_test.go
go/ct/utils/: adapter.go  adapter_test.go
go/examples/: example.go  pushData.go  push_data.go
go/geth_adapter/: adapter.go  adapter_test.go  adapter_test_mocks.go  state_db.go  state_db_test.go
go/integration_test/: keccak.go
go/integration_test/interpreter/: dynamic_gas.go  instruction_info.go  integration_test.go  invalid_code_test.go  invalid_instructions_test.go  revision_test.go  stack_boundary_test.go  stress_test.go  test_config.go  test_evm.go  test_evm_mock.go  test_evm_test.go  verify_gas_test.go  vm_test.go
go/integration_test/processor/: access_list_test.go  calls_test.go  create_test.go  examples_test.go  gas_billing_test.go  precompiled_test.go  processor_gas_test.go  processor_test.go  scenario.go  scenario_test.go  transfer_test.go  world_state.go  world_state_test.go
go/interpreter/evmc/: evmc_interpreter.go  evmc_interpreter_test.go  evmc_steppable_interpreter.go  evmc_steppable_interpreter_test.go
go/interpreter/evmone/: evmone.go  evmone_test.go
go/interpreter/evmrs/: ct.go  ct_test.go  evmrs.go  evmrs_test.go
go/interpreter/evmzero/: ct.go  ct_test.go  evmzero.go  evmzero_test.go
go/interpreter/geth/: ct.go  geth.go  geth_test.go
go/interpreter/lfvm/: converter.go  converter_fuzz_test.go  converter_test.go  ct.go  ct_test.go  errors.go  gas.go  gas_test.go  hash_cache.go  hash_cache_test.go  instruction_logger.go  instruction_logger_test.go  instruction_statistcs_test.go  instruction_test.go  instructions.go  instructions_test.go  interpreter.go  interpreter_test.go  keccak.go  lfvm.go  lfvm_interface_test.go  lfvm_test.go  memory.go  memory_test.go  opcode.go  stack_usage.go
go/interpreter/sfvm/: analysis.go  analysis_test.go  converter.go  converter_fuzz_test.go  converter_test.go  ct.go  ct_test.go  errors.go  example_code_test.go  gas.go  gas_test.go  hash_cache.go  hash_cache_test.go  instruction.go  instruction_logger.go  instruction_logger_test.go  instruction_statistcs_test.go  instruction_statistics.go  instruction_test.go  instructions.go  instructions_test.go  interpreter.go  interpreter_mock.go  interpreter_test.go  keccak.go  keccak.h  keccak_test.go  lfvm.go  memory.go  memory_test.go  opcode.go  opcode_test.go  sfvm.go  sfvm_interface_test.go  sfvm_test.go  stack.go  stack_test.go  stack_usage.go  stack_usage_test.go  super_instructions.go  (+1 more)
go/processor/: test_utils.go
go/processor/floria/: built_in_contract_mock.go  context_wrapper.go  context_wrapper_test.go  floria_context.go  precompiled.go  precompiled_test.go  processor.go  processor_test.go  run_context.go  run_context_test.go  state_contract.go  state_contract_test.go
go/processor/floria_eth/: processor.go
go/processor/geth/: processor.go  processor_test.go  state_contract.go
go/processor/geth_eth/: processor.go
go/processor/opera/: processor.go  processor_test.go
go/tosca/: interpreter.go  interpreter_mock.go  processor.go  processor_mock.go  revisions.go  revisions_test.go  world_state.go  world_state_mock.go
go/tosca/vm/: opcodes.go  opcodes_test.go
go/tosca_adapter/: state_db.go
py/: all_rules  jump_rules  rules  spec_prover.py
regression_inputs/: no_code_#27.json
rust/: BUILD.md  Cargo.toml  gen-opcode-stats.sh
rust/.cargo/: config.toml
rust/benchmarks/: Cargo.toml
rust/benchmarks/src/: lib.rs  main.rs
rust/common/: Cargo.toml
rust/common/src/: amount.rs  lib.rs
rust/driver/: Cargo.toml
rust/driver/src/: lib.rs
rust/fuzz/: Cargo.toml
rust/scripts/: plot_benchstat.py
rust/src/: evmc.rs  evmrs.rs  interpreter.rs  lib.rs
rust/src/ffi/: evmc_vm.rs  steppable_evmc_vm.rs
rust/src/types/: amount.rs  cache.rs  code_analysis.rs  code_reader.rs  hash_cache.rs  memory.rs  mod.rs  observer.rs  op_fn_data.rs  opcode.rs  stack.rs
rust/src/utils/: gas.rs  helpers.rs
(+3 files in other folders)
